minor alignment fix

--- a/KickIt/static/css/header.css
+++ b/KickIt/static/css/header.css
@@ -52,7 +52,7 @@ nav {
 }
 
 .radio_dot .radio_dot_svg {
-    padding: 6px 0 0 4px;
+    padding: 7px 0 0 4px;
     width: 14px !important;
 }
 
